module(
    name = "any-sketch-java",
    repo_name = "any_sketch_java",
)

TRUTH_VERSION = "1.4.4"

# Bazel Central Registry deps.
bazel_dep(
    name = "rules_java",
    version = "8.6.2",
)
bazel_dep(
    name = "protobuf",
    version = "27.3",
    repo_name = "com_google_protobuf",
)
bazel_dep(
    name = "rules_jvm_external",
    version = "6.6",
)

# WFA registry deps.
bazel_dep(
    name = "rules_swig",
    version = "0.1.0",
    repo_name = "wfa_rules_swig",
)
bazel_dep(
    name = "any-sketch",
    repo_name = "any_sketch",
)

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.artifact(
    testonly = True,
    artifact = "truth",
    group = "com.google.truth",
    version = TRUTH_VERSION,
)
maven.artifact(
    testonly = True,
    artifact = "truth-java8-extension",
    group = "com.google.truth.extensions",
    version = TRUTH_VERSION,
)
maven.artifact(
    testonly = True,
    artifact = "truth-proto-extension",
    group = "com.google.truth.extensions",
    version = TRUTH_VERSION,
)
maven.artifact(
    testonly = True,
    artifact = "truth-liteproto-extension",
    group = "com.google.truth.extensions",
    version = TRUTH_VERSION,
)
maven.install(
    artifacts = [
        "com.google.guava:guava:33.3.1-jre",
        "junit:junit:4.13.2",
        "com.google.protobuf:protobuf-java",
    ],
    boms = [
        # Must be compatible with protobuf version.
        "com.google.protobuf:protobuf-bom:4.27.5",
    ],
    fail_if_repin_required = True,
    fetch_sources = True,  # For IDE support.
    lock_file = "//:maven_install.json",
    resolver = "maven",
    strict_visibility = True,
)
use_repo(maven, "maven")

# Force a newer version of boringssl than the transitive grpc dep.
single_version_override(
    module_name = "boringssl",
    version = "0.0.0-20230215-5c22014",
)

# DO_NOT_SUBMIT(world-federation-of-advertisers/any-sketch#51): Use version.
archive_override(
    module_name = "any-sketch",
    integrity = "sha256-NvGf0pEa/CVMtZn9VIHgOAtnHJOB4j+SmYBj1JSjXno=",
    strip_prefix = "any-sketch-7f751ef7fe28a7d9cc7aee1133f25643d8c5437c",
    urls = [
        "https://github.com/world-federation-of-advertisers/any-sketch/archive/7f751ef7fe28a7d9cc7aee1133f25643d8c5437c.tar.gz",
    ],
)
