load("@rules_java//java:defs.bzl", "java_proto_library")

package(default_visibility = ["//visibility:public"])

java_proto_library(
    name = "sketch_java_proto",
    deps = ["@any_sketch//src/main/proto/wfa/any_sketch:sketch_proto"],
)

java_proto_library(
    name = "noise_parameters_java_proto",
    deps = ["@any_sketch//src/main/proto/wfa/any_sketch:differential_privacy_proto"],
)
