load("@rules_java//java:defs.bzl", "java_library")

package(default_visibility = ["//visibility:public"])

java_library(
    name = "anysketch",
    srcs = [
        "AnySketch.java",
        "ValueFunction.java",
    ],
    deps = [
        "//imports/com/google/common:guava",
        "//src/main/java/org/wfanet/anysketch/aggregators",
        "//src/main/java/org/wfanet/anysketch/distributions",
        "//src/main/java/org/wfanet/anysketch/fingerprinters",
    ],
)

java_library(
    name = "sketch_proto_converter",
    srcs = [
        "SketchProtos.java",
        "SketchSql.java",
    ],
    resources = [
        "//src/main/java/org/wfanet/anysketch/sql",
    ],
    deps = [
        ":anysketch",
        "//imports/com/google/common:guava",
        "//src/main/java/org/wfanet/anysketch/aggregators",
        "//src/main/java/org/wfanet/anysketch/distributions",
        "//src/main/java/org/wfanet/anysketch/fingerprinters",
        "//src/main/proto/wfa/any_sketch:sketch_java_proto",
    ],
)
