load("@rules_java//java:defs.bzl", "java_library")
load("@rules_jvm_external//:defs.bzl", "maven_export")
load("@wfa_rules_swig//java:defs.bzl", "java_wrap_cc")
load("//build/maven:defs.bzl", "artifact_version")

package(default_visibility = ["//src/test/java/org/wfanet/estimation:__pkg__"])

MAVEN_COORDINATES = "org.wfanet.measurement.anysketch:estimation:" + artifact_version()

java_wrap_cc(
    name = "estimators",
    src = "estimators.swig",
    module = "Estimators",
    package = "org.wfanet.estimation",
    deps = [
        "@any_sketch//src/main/cc/estimation:estimators",
    ],
)

java_library(
    name = "value_histogram",
    srcs = [
        "ValueHistogram.java",
    ],
    deps = [
        "//imports/com/google/common:guava",
        "//src/main/java/org/wfanet/anysketch",
    ],
)

java_library(
    name = "estimation",
    tags = ["maven_coordinates=" + MAVEN_COORDINATES],
    exports = [
        ":estimators",
        ":value_histogram",
    ],
)

maven_export(
    name = "estimation_maven",
    lib_name = "estimation",
    maven_coordinates = MAVEN_COORDINATES,
    tags = [
        "no-remote-cache",
    ],
)
