package(default_visibility = [
    "//src/main/java/org/wfanet/anysketch:__subpackages__",
    "//src/test/java/org/wfanet/anysketch:__subpackages__",
])

java_proto_library(
    name = "sketch_encryption_methods_java_proto",
    deps = [
        "@any_sketch//src/main/proto/wfa/any_sketch/crypto:sketch_encryption_methods_proto",
    ],
)

java_proto_library(
    name = "el_gamal_key_java_proto",
    deps = ["@any_sketch//src/main/proto/wfa/any_sketch/crypto:el_gamal_key_proto"],
)
