load("@rules_java//java:defs.bzl", "java_test")

java_test(
    name = "any_sketch_test",
    srcs = ["AnySketchTest.java"],
    test_class = "org.wfanet.anysketch.AnySketchTest",
    deps = [
        "//imports/com/google/common:guava",
        "//imports/com/google/common/truth",
        "//imports/org/junit",
        "//src/main/java/org/wfanet/anysketch",
        "//src/main/java/org/wfanet/anysketch/aggregators",
        "//src/main/java/org/wfanet/anysketch/distributions",
        "//src/main/java/org/wfanet/anysketch/fingerprinters",
    ],
)

java_test(
    name = "sketch_protos_test",
    srcs = ["SketchProtosTest.java"],
    resources = [
        "//src/test/java/org/wfanet/anysketch/testdata",
    ],
    test_class = "org.wfanet.anysketch.SketchProtosTest",
    deps = [
        "//imports/com/google/common:guava",
        "//imports/com/google/common/truth",
        "//imports/com/google/common/truth/extensions/proto",
        "//imports/org/junit",
        "//src/main/java/org/wfanet/anysketch",
        "//src/main/java/org/wfanet/anysketch:sketch_proto_converter",
        "//src/main/java/org/wfanet/anysketch/aggregators",
        "//src/main/java/org/wfanet/anysketch/distributions",
        "//src/main/java/org/wfanet/anysketch/fingerprinters",
        "//src/main/proto/wfa/any_sketch:sketch_java_proto",
        "@com_google_protobuf//:protobuf_java",
    ],
)

java_test(
    name = "SketchSqlTest",
    srcs = ["SketchSqlTest.java"],
    resources = [
        "//src/test/java/org/wfanet/anysketch/testdata",
    ],
    test_class = "org.wfanet.anysketch.SketchSqlTest",
    deps = [
        "//imports/com/google/common:guava",
        "//imports/com/google/common/truth",
        "//imports/com/google/common/truth/extensions/proto",
        "//imports/org/junit",
        "//src/main/java/org/wfanet/anysketch",
        "//src/main/java/org/wfanet/anysketch:sketch_proto_converter",
        "//src/main/java/org/wfanet/anysketch/aggregators",
        "//src/main/java/org/wfanet/anysketch/distributions",
        "//src/main/java/org/wfanet/anysketch/fingerprinters",
        "//src/main/proto/wfa/any_sketch:sketch_java_proto",
        "@com_google_protobuf//:protobuf_java",
    ],
)
