load("@rules_java//java:defs.bzl", "java_test")

java_test(
    name = "tests",
    srcs = [
        "EstimatorsTest.java",
    ],
    test_class = "org.wfanet.estimation.EstimatorsTest",
    deps = [
        "//imports/com/google/common/truth",
        "//src/main/java/org/wfanet/estimation:estimators",
    ],
)

java_test(
    name = "value_histogram_test",
    srcs = [
        "ValueHistogramTest.java",
    ],
    resources = [
        "//src/test/java/org/wfanet/anysketch/testdata",
    ],
    test_class = "org.wfanet.estimation.ValueHistogramTest",
    deps = [
        "//imports/com/google/common:guava",
        "//imports/com/google/common/truth",
        "//imports/com/google/protobuf",
        "//imports/org/junit",
        "//src/main/java/org/wfanet/anysketch",
        "//src/main/java/org/wfanet/anysketch:sketch_proto_converter",
        "//src/main/java/org/wfanet/estimation:value_histogram",
        "//src/main/proto/wfa/any_sketch:sketch_java_proto",
    ],
)
