load("@rules_java//java:defs.bzl", "java_test")

java_test(
    name = "tests",
    srcs = [
        "VidSamplingBucketTesterTest.java",
    ],
    test_class = "org.wfanet.estimation.VidSamplingBucketTesterTest",
    deps = [
        "//src/main/java/org/wfanet/sampling:vid_sampling_bucket_tester",
        "@maven//:com_google_truth_truth",
    ],
)
