load("@rules_java//java:defs.bzl", "java_test")

java_test(
    name = "VidSamplerTest",
    srcs = [
        "VidSamplerTest.java",
    ],
    test_class = "org.wfanet.estimation.VidSamplerTest",
    deps = [
        "//src/main/java/org/wfanet/sampling:vid_sampler",
        "@maven//:com_google_truth_truth",
    ],
)
