load("@rules_java//java:defs.bzl", "java_test")

java_test(
    name = "VidSamplerTest",
    srcs = [
        "VidSamplerTest.java",
    ],
    test_class = "org.wfanet.estimation.VidSamplerTest",
    deps = [
        "//imports/com/google/common:guava",
        "//imports/com/google/common/truth",
        "//src/main/java/org/wfanet/sampling:vid_sampler",
    ],
)
