load("@wfa_rules_swig//java:defs.bzl", "java_wrap_cc")

package(default_visibility = [
    "//src/main/java/org/wfanet/anysketch:__subpackages__",
    "//src/test/java/org/wfanet/anysketch:__subpackages__",
])

java_wrap_cc(
    name = "sketch_encrypter_adapter",
    src = "sketch_encrypter.swig",
    module = "SketchEncrypterAdapter",
    package = "org.wfanet.anysketch.crypto",
    deps = [
        "@any_sketch//src/main/cc/any_sketch/crypto:sketch_encrypter_adapter",
    ],
)
