load("@rules_java//java:defs.bzl", "java_library")

package(default_visibility = ["//visibility:public"])

java_library(
    name = "distributions",
    srcs = glob(["*.java"]),
    deps = [
        "//imports/com/google/common:guava",
        "//src/main/java/org/wfanet/anysketch/fingerprinters",
    ],
)
