load("@rules_java//java:defs.bzl", "java_test")

java_test(
    name = "unique_aggregator_test",
    srcs = ["UniqueAggregatorTest.java"],
    test_class = "org.wfanet.anysketch.aggregators.UniqueAggregatorTest",
    deps = [
        "//imports/com/google/common/truth",
        "//imports/org/junit",
        "//src/main/java/org/wfanet/anysketch/aggregators",
    ],
)
