load("@rules_java//java:defs.bzl", "java_test")

java_test(
    name = "exponential_distribution_test",
    srcs = ["ExponentialDistributionTest.java"],
    test_class = "org.wfanet.anysketch.distributions.ExponentialDistributionTest",
    deps = [
        "//imports/com/google/common:guava",
        "//imports/com/google/common/truth",
        "//imports/org/junit",
        "//src/main/java/org/wfanet/anysketch/distributions",
        "//src/main/java/org/wfanet/anysketch/fingerprinters",
    ],
)

java_test(
    name = "geometric_distribution_test",
    srcs = ["GeometricDistributionTest.java"],
    test_class = "org.wfanet.anysketch.distributions.GeometricDistributionTest",
    deps = [
        "//imports/com/google/common:guava",
        "//imports/com/google/common/truth",
        "//imports/org/junit",
        "//src/main/java/org/wfanet/anysketch/distributions",
        "//src/main/java/org/wfanet/anysketch/fingerprinters",
    ],
)

java_test(
    name = "oracle_distribution_test",
    srcs = ["OracleDistributionTest.java"],
    test_class = "org.wfanet.anysketch.distributions.OracleDistributionTest",
    deps = [
        "//imports/com/google/common:guava",
        "//imports/com/google/common/truth",
        "//imports/org/junit",
        "//src/main/java/org/wfanet/anysketch/distributions",
    ],
)

java_test(
    name = "uniform_distribution_test",
    srcs = ["UniformDistributionTest.java"],
    test_class = "org.wfanet.anysketch.distributions.UniformDistributionTest",
    deps = [
        "//imports/com/google/common/truth",
        "//imports/org/junit",
        "//src/main/java/org/wfanet/anysketch/distributions",
        "//src/main/java/org/wfanet/anysketch/fingerprinters",
    ],
)
